# mrpc

./: .gitignore  CHANGELOG.md  Cargo.toml  DEV.md  README.md  clippy.toml
benches/: rpc_benchmarks.rs
examples/: echo.rs  serde_support.rs  simple_client.rs  simple_server.rs
src/: connection.rs  error.rs  lib.rs  message.rs  transport.rs
tests/: basic.rs  conformance.rs  pingpong.rs  simple.rs
