[package]
name = "mrpc"
version = "0.0.1"
edition = "2021"
authors = ["Aldo Cortesi <aldo@corte.si>"]
description = "MessagePack-RPC for Rust"
license = "MIT"
repository = "https://github.com/cortesi/mrpc"


[dependencies]
async-trait = "0.1.80"
bytes = "1.6.0"
rmp = "0.8.14"
rmpv = "1.3.0"
thiserror = "1.0.61"
tokio = { version = "1.39.0", features = ["full"] }
tracing = "0.1.40"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["tokio"] }
lazy_static = "1.5.0"
tempfile = "3.10.1"
tracing-test = "0.2.5"

[[bench]]
name = "rpc_benchmarks"
harness = false
