[package]
name = "mrpc"
version = "0.0.7"
edition = "2024"
authors = ["Aldo Cortesi <aldo@corte.si>"]
description = "MessagePack-RPC for Rust"
license = "MIT"
repository = "https://github.com/cortesi/mrpc"
keywords = ["msgpack", "rpc", "messagepack", "msgpack-rpc"]

[dependencies]
async-trait = "0.1.80"
bytes = "1.6.0"
rmpv = "1.3.0"
thiserror = "2.0.9"
tokio = { version = "1.39.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io-util"] }
tracing = "0.1.40"

[dev-dependencies]
criterion = { version = "0.8.0" }
futures = "0.3.30"
lazy_static = "1.5.0"
msgpack-rpc = "0.4.2"
tempfile = "3.10.1"
tracing-test = "0.2.5"

[[bench]]
name = "rpc_benchmarks"
harness = false


[lints.rust]
missing_docs = "warn"

# Enable briefly, run cargo clippy (without --tests and --examples), fix
# unused deps, then disable it again.
# unused_crate_dependencies = "warn"

[lints.clippy]
absolute_paths = "warn"
branches_sharing_code = "warn"
ignore_without_reason = "warn"
let_underscore_must_use = "warn"
many_single_char_names = "warn"
missing_docs_in_private_items = "warn"
multiple_inherent_impl = "warn"
needless_pass_by_value = "warn"
redundant_clone = "warn"
redundant_pub_crate = "warn"
self_named_module_files = "warn"
tests_outside_test_module = "warn"
use_self = "warn"
wildcard_dependencies = "warn"
cfg_not_test = "warn"
comparison_chain = "warn"
items_after_statements = "warn"
needless_pass_by_ref_mut = "warn"

# Settings with config values in clippy.toml
cognitive_complexity = "warn"
excessive_nesting = "warn"
too_many_lines = "warn"
